--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -21,6 +21,9 @@
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
 
+  <%= f.check_box "user[role]", "client" %>
+  <%= f.label :role, "I am a Client"%> <br>
+
   <div class="actions">
     <%= f.submit "Sign up" %>
   </div>
