--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -21,8 +21,8 @@
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
 
+  <%= f.label :role, "Freelancer or Client?"%> <br>
   <%= f.select(:role, User.roles.keys.map {|role| [role.titleize,role]}) %>
-  <%= f.label :role, "I am a Client"%> <br>
 
   <div class="actions">
     <%= f.submit "Sign up" %>
