test routes and nested forms for category model

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <%= render 'layouts/messages' %>
+    <%= render 'layouts/message' %>
     <%= render 'layouts/navigation' %>
   </header>
 
