--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -3,9 +3,10 @@
   <ul>
     <% if !current_user %>
         <li><%= link_to "Sign up", new_user_registration_path %></li>
+        <li><%= link_to "Sign in with Facebook", user_facebook_omniauth_authorize_path %></li>
         <li><%= link_to "Log in", new_user_session_path %></li>
     <% elsif current_user.freelancer? %>
-      <li>%> logged in as: <%= link_to current_user.email, edit_user_registration_path %></li>
+      <li>logged in as: <%= link_to current_user.email, edit_user_registration_path %></li>
       <li><%= link_to "My Projects", dashboard_path %></li>
       <li><%= link_to "New Project", new_project_path %></li>
       <li><%= link_to "Log out", destroy_user_session_path, :method => 'delete' %></li>
