--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -1,3 +1,13 @@
+<% if current_user.errors.any? %>
+  <div id="error_explanation" class="errors">
+    <ul>
+    <% current_user.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+    </ul>
+  </div>
+<% end %>
+
 <%= form_for @category do |f| %>
   <%= f.text_field :name %>
   <%= f.submit %>
