--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <h1><%= link_to "Freelancelot", root_path %></h1>
   <header>
     <%= render 'layouts/message' %>
     <%= render 'layouts/navigation' %>
