--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -12,6 +12,7 @@
     <% else %>
       <li> logged in as: <%= link_to current_user.email, edit_user_registration_path %></li>
   <li>Search Project Ticket</li>
+  <li><%= link_to 'Users', users_path %></li>
       <li><%= link_to "Log out", destroy_user_session_path, :method => 'delete' %></li>
     <% end %>
   </ul>
