--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -16,7 +16,7 @@
 
 
 <div>
-  <% if @user.admin? || @user.freelancer? %>
+  <% if current_user.admin? || current_user.freelancer? %>
     <%= link_to "Edit Project", edit_project_path %>
   <% end %>
 </div>
