Add delete option for Category and Project Model. Allow users to change their current role in the edit user view

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -4,6 +4,6 @@
   </ul>
 <% end %>
 
-<% if @user.admin? || @user.freelancer? %>
+<% if current_user.admin? || current_user.freelancer? %>
   <%= link_to "Add New Category", new_category_path %>
 <% end %>
