--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -3,6 +3,6 @@
 <% end %>
 
 
-<% if @user.admin? || @user.freelancer? %>
+<% if current_user.admin? || current_user.freelancer? %>
   <%= link_to "New Project", new_project_path %>
 <% end %>
