--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -5,12 +5,14 @@
         <li><%= link_to "Sign in with Facebook", user_facebook_omniauth_authorize_path %></li>
         <li><%= link_to "Log in", new_user_session_path %></li>
     <% elsif current_user.freelancer? %>
-      <li>logged in as: <%= link_to current_user.email, edit_user_registration_path %></li>
+      <li>logged in as: <%= current_user.email %></li>
+      <li> <%= link_to "Edit My Account", edit_user_registration_path %></li>
       <li><%= link_to "My Projects", dashboard_path %></li>
       <li><%= link_to "New Project", new_project_path %></li>
       <li><%= link_to "Log out", destroy_user_session_path, :method => 'delete' %></li>
     <% else %>
-      <li> logged in as: <%= link_to current_user.email, edit_user_registration_path %></li>
+      <li>logged in as: <%= current_user.email %></li>
+      <li><%= link_to "Edit My Account", edit_user_registration_path %></li>
   <li>Search Project Ticket</li>
   <li><%= link_to 'Users', users_path %></li>
       <li><%= link_to "Log out", destroy_user_session_path, :method => 'delete' %></li>
