Add name attribute to user model and include in registration forms. Fix Category_controller index

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,11 +2,11 @@
 <p>Name: <%= @user.name if @user.name %></p>
 <p>Email: <%= @user.email if @user.email %></p>
 <% @user.projects.each do |project| %>
-  <h2><%= @project.title %><h2>
-  <h4>Ticket Number #<%= @project.ticket %><h4>
-  <p><%= @project.description %><p>
-  <p>Start Date: <%= @project.start_date %><p>
-  <p>Deadline: <%= @project.deadline %><p>
-  <p>Hours Currently Logged: <%= @project.time_log %> hours<p>
-  <p>Project Status <%= @project.status %>
+  <h2><%= project.title %><h2>
+  <h4>Ticket Number #<%= project.ticket %><h4>
+  <p><%= project.description %><p>
+  <p>Start Date: <%= project.start_date %><p>
+  <p>Deadline: <%= project.deadline %><p>
+  <p>Hours Currently Logged: <%= project.time_log %> hours<p>
+  <p>Project Status <%= project.status %>
 <% end %>
