--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Freelancers</h1>
 <% @users.each do |user| %>
-  <h3><%= user.email %></h3>
+  <h3><%= user.name %></h3>
   <h3>Current projects: <%= user.projects.length %></h3>
   <p><%= link_to 'View', user_projects_path(user) %></p>
   <% end %>
