Add Sessions controller and more logic for Facebook login. Add back button to views. :name field added to Devise

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,3 +10,5 @@
   <p>Hours Currently Logged: <%= project.time_log %> hours<p>
   <p>Project Status <%= project.status %>
 <% end %>
+
+<%= link_to 'Back', users_path %>
