--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -18,9 +18,10 @@
 <div>
   <% if current_user.admin? || current_user.freelancer? %>
     <%= link_to "Edit Project", edit_project_path %>
+    <%= link_to 'Delete This Project',@project, method: :delete, data: { confirm: 'Are you sure?' } %>
   <% end %>
 </div>
 
 <div>
-  <%= link_to 'Delete This Project',@project, method: :delete, data: { confirm: 'Are you sure?' } %>
+  <%= link_to 'Back', projects_path %>
 </div>
