--- a/app/views/projects/dashboard.html.erb
+++ b/app/views/projects/dashboard.html.erb
@@ -6,7 +6,7 @@
   <% if @projects.empty? %>
     <h1>No current projects</h1>
   <% else %>
-    <% current_user.projects.each do |project| %>
+    <% current_user.projects.list_by_deadline.each do |project| %>
         <h4><%= link_to project.title, project_path(project)%></h4>
         <h5>Client: <%= project.client_name %> | Ticket # <%= project.ticket %> | Deadline: <%= project.deadline %></h5>
     <% end %>
