--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -15,6 +15,7 @@
       <li><%= link_to "Edit My Account", edit_user_registration_path %></li>
   <li>Search Project Ticket</li>
   <li><%= link_to 'Users', users_path %></li>
+  <li><%= link_to 'Projects by Category', categories_path %></li>
       <li><%= link_to "Log out", destroy_user_session_path, :method => 'delete' %></li>
     <% end %>
   </ul>
