--- a/app/views/projects/dashboard.html.erb
+++ b/app/views/projects/dashboard.html.erb
@@ -1,17 +1,16 @@
 <h1>Welcome to your Dashboard</h1>
 <div>
-    <% if current_user.freelancer? %>
-      <%= link_to "Edit My Account", edit_user_registration_path(current_user) %>
-</div>
-      <% if @projects.empty? %>
-        <h1>No current projects</h1>
-      <% else %>
+  <% if current_user.freelancer? %>
+    <% if @projects.empty? %>
+      <h1>No current projects</h1>
+    <% else %>
+    <h3> Total Projects: <%= current_user.projects.length %> </h3>
+    <li><%= current_user.projects.not_started %> Projects Not started</li>
+
         <% current_user.projects.list_by_deadline.each do |project| %>
-        <li><%= project.complete %> Projects Completed</li>
-        <li><%= project.in_progress %> Projects In Progress</li>
-        <li><%= project.not_started %> Projects Not started</li>
           <h4><%= link_to project.title, project_path(project)%></h4>
           <h5>Client: <%= project.client_name %> | Ticket # <%= project.ticket %> | Deadline: <%= project.deadline %></h5>
+        </div>
         <% end %>
       <% end %>
   <% end %>
