Update spec.md checklist. Successfully edit functionality of search method for client user role

--- a/app/views/projects/dashboard.html.erb
+++ b/app/views/projects/dashboard.html.erb
@@ -1,3 +1,4 @@
+
 <h1>Welcome to your Dashboard</h1>
 
 <div>
@@ -6,14 +7,15 @@
       <h1>No current projects</h1>
     <% else %>
 
+
     <h3> Total Projects: <%= current_user.projects.length %> </h3>
     <ul>
-      <li><%= current_user.projects.complete.count %> Projects Completed</li>
-      <li><%= current_user.projects.in_progress.count %> Projects In Progress</li>
-      <li><%= current_user.projects.not_started.count %> Projects Not Started</li>
+      <li><%= @projects.complete.count %> Projects Completed</li>
+      <li><%= @projects.in_progress.count %> Projects In Progress</li>
+      <li><%= @projects.not_started.count %> Projects Not Started</li>
     </ul>
 
-        <% current_user.projects.list_by_deadline.each do |project| %>
+        <% @projects.list_by_deadline.each do |project| %>
           <h4><%= link_to project.title, project_path(project)%></h4>
           <h5>Client: <%= project.client_name %> | Ticket # <%= project.ticket %> | Deadline: <%= project.deadline %></h5>
         </div>
