Fix functionality for deadline_warning method and separated search into own route and controller

--- a/app/views/projects/dashboard.html.erb
+++ b/app/views/projects/dashboard.html.erb
@@ -7,6 +7,9 @@
       <h1>No current projects</h1>
     <% else %>
 
+    <% @projects.deadline_message.each do |project| %>
+        <%= project.title %>
+    <% end %>
 
     <h3> Total Projects: <%= current_user.projects.length %> </h3>
     <ul>
