--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,6 +1,6 @@
-<% @projects.each do |project| %>
+<!-- <% @projects.each do |project| %>
   <h2><a href="/projects/<%= project.id %>"><%= project.title %></a></h2>
-<% end %>
+<% end %> -->
 
 
 <% if current_user.admin? || current_user.freelancer? %>
