--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -14,17 +14,17 @@
 
 
 
-    <h3>Track the status of you Project</h3>
+    <h3>Track the status of your Project</h3>
     <h4>Enter Project Title or Ticket Number</h4>
     <%= form_tag(projects_path, :method => "get", id: "search-form") do %>
       <%= text_field_tag :search, params[:search], placeholder: "Project Title/Ticket" %>
       <%= submit_tag "Search" %>
+      <% end %>
         <% if @projects.present? %>
           <%= render @projects %>
         <% else %>
           <p>There are no projects containing the term(s) <%= params[:search] %>.</p>
         <% end %>
-    <% end %>
 
 
 
