--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,8 +1,3 @@
-<!-- <% @projects.each do |project| %>
+<% @projects.each do |project| %>
   <h2><a href="/projects/<%= project.id %>"><%= project.title %></a></h2>
-<% end %> -->
-
-
-<% if current_user.admin? || current_user.freelancer? %>
-  <%= link_to "New Project", new_project_path %>
 <% end %>
