--- a/app/views/projects/dashboard.html.erb
+++ b/app/views/projects/dashboard.html.erb
@@ -11,7 +11,7 @@
       <h2>Project:  <%= project.title %> is due soon!</h2>
     <% end %>
 
-    <h3> Total Projects: <%= current_user.projects.length %> </h3>
+  <h3> Total Projects: <%= @projects.length %> </h3>
     <ul>
       <li><%= @projects.complete.count %> Projects Completed</li>
       <li><%= @projects.in_progress.count %> Projects In Progress</li>
