Fix create method in categories_controller and add working error messages to category and project form partials

--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -1,11 +1,8 @@
-<% if current_user.errors.any? %>
-  <div id="error_explanation" class="errors">
-    <ul>
-    <% current_user.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-    <% end %>
-    </ul>
-  </div>
+<% if @category.errors.any? %>
+The following error(s) prevented this project from being saved:
+  <% @category.errors.full_messages.each do |message| %>
+    <li><%= message %></li>
+  <% end %>
 <% end %>
 
 <%= form_for @category do |f| %>
