--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,13 +1,10 @@
-
-<% if current_user.errors.any? %>
-  <div id="error_explanation" class="errors">
-    <ul>
-    <% current_user.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-    <% end %>
-    </ul>
-  </div>
+<% if @project.errors.any? %>
+The following error(s) prevented this project from being saved:
+  <% @project.errors.full_messages.each do |message| %>
+    <li><%= message %></li>
+  <% end %>
 <% end %>
+
 
 <%= form_for(@project) do |f| %>
   <div>
