--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -4,8 +4,8 @@
   <%= link_to project.title, project_path(project) %>
 <% end %>
 
-<% if policy(@category).update? %>
-  <p><%= button_to "Edit", edit_category_path, method: "get" %></p>
+<% if current_user.admin? || current_user.freelancer? %>
+  <p><%= button_to "Edit", edit_category_path, method: "get"%></p>
   <p><%= button_to "Delete", category_path, method: "delete"%></p>
   <p><%= link_to "Back", categories_path%></p>
 <% end %>
