--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -4,7 +4,7 @@
   <%= link_to project.title, project_path(project) %>
 <% end %>
 
-<% if current_user.admin? || current_user.freelancer? %>
+<% if policy(@category).update? %>
   <p><%= button_to "Edit", edit_category_path, method: "get"%></p>
   <p><%= button_to "Delete", category_path, method: "delete"%></p>
   <p><%= link_to "Back", categories_path%></p>
