--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,13 +1,13 @@
 <h2><%= @project.title %><h2>
 <h4>Ticket Number #<%= @project.ticket %><h4>
-<h4><%= @project.client_name %><h4>
+<h4>Client: <%= @project.client_name %><h4>
 
 <% @project.categories.each do |category| %>
-  <strong><%= category.name %></strong>
+  Category: <strong><%= category.name %></strong>
 <% end %>
 
 <p><%= @project.description %><p>
-<p>$<%= @project.budget %><p>
+<p>Budget: $<%= @project.budget %><p>
 <p>Start Date: <%= @project.start_date %><p>
 <p>Deadline: <%= @project.deadline %><p>
 <p>Hours Currently Logged: <%= @project.time_log %> hours<p>
