--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,3 @@
-<h3>User</h3>
 <p>Name: <%= @user.name if @user.name %></p>
 <p>Email: <%= @user.email if @user.email %></p>
 <% @user.projects.each do |project| %>
@@ -10,5 +9,6 @@
   <p>Hours Currently Logged: <%= project.time_log %> hours<p>
   <p>Project Status <%= project.status %>
 <% end %>
-
-<%= link_to 'Back', users_path %>
+<div>
+  <%= link_to 'Back to Freelancers', users_path %>
+</div>
