--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -4,6 +4,7 @@
         <li><%= link_to "Sign up", new_user_registration_path %></li>
         <li><%= link_to "Sign in with Facebook", user_facebook_omniauth_authorize_path %></li>
         <li><%= link_to "Log in", new_user_session_path %></li>
+        <li><%= link_to "About", about_path %></li>
     <% elsif current_user.freelancer? %>
       <li>logged in as: <%= current_user.email %></li>
       <li> <%= link_to "Edit My Account", edit_user_registration_path %></li>
