--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -7,5 +7,6 @@
 <% if policy(@category).update? %>
   <p><%= button_to "Edit", edit_category_path, method: "get"%></p>
   <p><%= button_to "Delete", category_path, method: "delete"%></p>
+<% else %>
   <p><%= link_to "Back", categories_path%></p>
 <% end %>
