--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -30,8 +30,9 @@
       <li><%= link_to 'Projects by Category', categories_path %></li>
       <li><%= link_to "Log out", destroy_user_session_path, :method => 'delete' %></li>
     <% else %>
+      <li>logged in as: <%= current_user.email %></li>
       <li><%= link_to "Edit My Account", edit_user_registration_path %></li>
-      <li><%= link_to 'Freelancers', users_path %></li>
+      <li><%= link_to 'Users', users_path %></li>
       <li><%= link_to 'Categories', categories_path %></li>
       <li><%= link_to 'Add a Category', new_category_path %></li>
       <li><%= link_to "Log out", destroy_user_session_path, :method => 'delete' %></li>
