--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,9 @@
     <%= render 'layouts/navigation' %>
   </header>
 
-<%= yield %>
+  <div class="body-container">
+   <%= yield %>
+  <div>
 
 </body>
 </html>
