--- a/app/views/projects/dashboard.html.erb
+++ b/app/views/projects/dashboard.html.erb
@@ -22,10 +22,16 @@
       <li><%= @projects.in_progress.count %> Projects In Progress</li>
       <li><%= @projects.not_started.count %> Projects Not Started</li>
     </ul>
-
-      <% @projects.list_by_deadline.each do |project| %>
+      <!--From 1st Ruby project-->
+      <!-- <% @projects.list_by_deadline.each do |project| %>
         <h4><%= link_to project.title, project_path(project)%></h4>
         <h5>Client: <%= project.client_name %> | Ticket # <%= project.ticket %> | Deadline: <%= project.deadline %></h5>
+    </div>
+      <% end %> -->
+      
+      <!--Show project function -->
+      <% @projects.list_by_deadline.each do |project| %>
+        <h4><%= link_to project.title, project_path(project), :class => "show_project", :'data-id' => project.id %></h4>
     </div>
       <% end %>
     <% end %>
