--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,3 +1,9 @@
-<% @projects.each do |project| %>
+<!--From 1st Ruby project-->
+<!--<% @projects.each do |project| %>
   <h2><a href="/projects/<%= project.id %>"><%= project.title %></a></h2>
+<% end %> -->
+
+<!--Show project function -->
+<% @projects.each do |project| %>
+  <h2><%= link_to project.title, project_path(project), :class => "show_project", :'data-id' => project.id %></h2>
 <% end %>
