Create categories.js with post function, add to manifest and add categoryResult div to new category form

--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -9,3 +9,8 @@ The following error(s) prevented this project from being saved:
   <%= f.text_field :name %>
   <%= f.submit %>
 <% end %>
+
+<!--categories.js -->
+<div id="categoryResult">
+  <h2 id="categoryName"></h2>
+</div>
