--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,11 +1,13 @@
-<h1><%= @category.name %></h1>
 <!--From 1st Ruby project-->
+<!--<h1><%= @category.name %></h1> -->
 <!--<% @category.projects.each do |project| %>
   <%= link_to project.title, project_path(project) %>
 <% end %>-->
 
 <!--Load projects function-->
-<%= link_to 'Projects', category_projects_path(@category), :class => "load_projects" %><br>
+<a href="#" class="js-next" data-id="<%=@category.id%>">Next Category</a>
+<h1 class="productName"><%= @category.name %></h1>
+<%= link_to 'Projects', project_path(@category), :class => "load_projects" %><br>
 
 <div id="projects_list">
   <ol></ol>
