--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -7,7 +7,7 @@
 <!--Load projects function-->
 <a href="#" class="js-next" data-id="<%=@category.id%>">Next Category</a>
 <h1 class="categoryName"><%= @category.name %></h1>
-<%= link_to 'Projects', project_path(@category), :class => "load_projects" %><br>
+<%= link_to 'Projects', projects_path(@category), :class => "load_projects" %><br>
 
 <div id="projects_list">
 
